updated contact details

--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 
 title: My Resume
-url: 'http://junlulocky.com'
+url: 'https://xbreizh.github.io/PanelCV/#'
 baseurl: '/PanelCV' #change it according to your repository name
 
 
 
 # Profile information
-yourname: Brown Smith  ## put your name
-title: 'GRAPHIC &amp; WEB DESIGNER'  ## your title
-location: San Francisco , CA
+yourname: Xavier Lamourec  ## put your name
+title: 'JAVA Developer'  ## your title
+location: Dundalk, Ireland
 
 
 ## Social Profiles
-facebook: http://www.facebook.com  ## your facebook account url
-twitter: http://www.twitter.com  ## your twitter account url
-linkedin: http://www.linkedin.com  ## your linkedin account url
-dribbble: http://www.dribble.com  ## you dribbble account url
-foursquare: http://www.foursquare.com  ## your foursquare account url
+#facebook: http://www.facebook.com  ## your facebook account url
+#twitter: http://www.twitter.com  ## your twitter account url
+#linkedin: http://www.linkedin.com  ## your linkedin account url
+#dribbble: http://www.dribble.com  ## you dribbble account url
+github: http://www.github.com  ## your foursquare account url
 
 
 
