--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: My Resume
-url: 'https://xbreizh.github.io/cv/#'
-baseurl: '/xavier_lamourec' #change it according to your repository name
+url: 'https://xbreizh.github.io/PanelCV/#'
+baseurl: '/PanelCV' #change it according to your repository name
 
 
 
@@ -16,7 +16,7 @@ location: Dundalk, Ireland
 #twitter: http://www.twitter.com  ## your twitter account url
 #linkedin: http://www.linkedin.com  ## your linkedin account url
 #dribbble: http://www.dribble.com  ## you dribbble account url
-github: http://www.github.com  ## your foursquare account url
+github: http://www.github.com  ## your github account url
 
 
 
