--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: My Resume
 url: 'https://xbreizh.github.io/PanelCV/#'
-baseurl: '/PanelCV' #change it according to your repository name
+baseurl: '/xavier_lamourec' #change it according to your repository name
 
 
 
