--- a/_config.yml
+++ b/_config.yml
@@ -7,17 +7,23 @@ baseurl: '/xavier_lamourec' #change it according to your repository name
 
 # Profile information
 yourname: Xavier Lamourec  ## put your name
+dateOfBirth: December 05, 1983
+address: Dundalk , Ireland
+email: xavier.lamourec@gmail.com
+phoneNumber: +353 83-88-46-758
+
+
+
 title: 'JAVA Developer'  ## your title
 location: Dundalk, Ireland
 
 
 ## Social Profiles
-#facebook: http://www.facebook.com  ## your facebook account url
-#twitter: http://www.twitter.com  ## your twitter account url
-#linkedin: http://www.linkedin.com  ## your linkedin account url
-#dribbble: http://www.dribble.com  ## you dribbble account url
 github: http://www.github.com  ## your github account url
 
+profile_desc: I have been working in IT for about 10 years, I am getting specialized in Java development to enhance my working base and progress within the industry.
+
+quote-left: I am a Team player always striving to develop personally and professionally by accepting every new challenge, networking with other industry professionals and consistently placing client solutions, satisfaction and service at the forefront of operations.
 
 
 # Update all the sections by editing the files inside _includes folder.
