updated cv, added config details

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ location: Dundalk, Ireland
 
 ## Social Profiles
 github: http://www.github.com  ## your github account url
+linkedin: https://www.linkedin.com/in/xavierlamourec/
 
 profile_desc: I have been working in IT for about 10 years, I am getting specialized in Java development to enhance my working base and progress within the industry.
 
