--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: My Resume
-url: 'https://xbreizh.github.io/PanelCV/#'
+url: 'https://xbreizh.github.io/xavier-lamourec/'
 baseurl: '/xavier_lamourec' #change it according to your repository name
 
 
